Fix Page Footer (#13)
* Fix Footer Length

- Get that darn footer to take up the whole width of the page. Currently, it is uneven, and I believe it is much preferred to have this at 100% length

-Hide X axis overflow on entire page

* Yarn Format

* Fix styles

---------

--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -1,24 +1,11 @@
 @use "styles/mixin";
 
-.component {
-  margin-top: 174px;
-  background-color: var(--red);
-  width: 100vw;
-}
-
 .contentWrapper {
   padding: 60px 80px;
   margin: 0 auto;
   @include mixin.maxWidth(1300px);
   display: flex;
   justify-content: space-between;
-}
-
-.content {
-  width: 66%;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
 }
 
 .text {
