--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,4 +1,5 @@
 .component {
   width: 100%;
   background-color: var(--bgGray);
+  overflow-x: hidden;
 }
